# mini-tracer

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs  mini_tracer.rs  renderer.rs  rendering_context.rs  texture.rs
src/auxiliary/: color.rs  intersection_info.rs  mod.rs  ray.rs  rotation_utils.rs  texture.rs  vector.rs
src/renderers/: mod.rs  renderer.rs  rendering_context.rs  software_ray_tracer.rs
src/scene/: camera.rs  light.rs  mod.rs  scene.rs  scene_manager.rs
src/scene/elements/: checker_board.rs  generic_scene_element.rs  mod.rs  scene_element.rs
src/scene/geometries/: cube.rs  mod.rs  plane.rs  rectangle.rs  regular_polygon.rs  sphere.rs  triangle.rs
src/scene/materials/: checker_board_material.rs  fixed_color_material.rs  mandelbrot_material.rs  mod.rs
