[package]
name = "mini-tracer"
version = "0.1.0"
authors = ["kalin"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.34"
image = "0.23"
winit = "0.24.0"
glam = { version = "0.14.0", default-features = false, features = ["libm"] }
bytemuck = { version = "1.4", features = [ "derive" ] }
futures = "0.3"
log = "0.4"
env_logger = "0.8.2"
rand = "0.8.0"
num = "0.4"
nalgebra = "0.26.2"
wgpu = "0.8.0"
wgpu-types = "0.8.0" 