[package]
name = "mini-tracer"
version = "0.1.0"
authors = ["kalin"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#automod = "1.0.2"
anyhow = "1.0.34"
image = "0.23"
winit = "0.25.0"
bytemuck = { version = "1.4", features = [ "derive" ] }
futures = "0.3"
log = "0.4"
env_logger = "0.9.0"
rand = "0.8.0"
num = "0.4"
nalgebra = "0.29.0"
wgpu = "0.8.0"
wgpu-types = "0.8.0" 